tests/baselines/reference/functionOverloads19(strict=true).errors.txt
functionOverloads19.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.
functionOverloads19.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads19.ts(2,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads19.ts (3 errors) ====
    function foo(bar:{b:string;});
             ~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 functionOverloads19.ts:3:10: The implementation signature is declared here.
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(bar:{a:string;});
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(bar:{a:any;}) { return {a:""} }
    